fix overflow

--- a/src/App.css
+++ b/src/App.css
@@ -38,6 +38,6 @@ body {
 }
 
 body, html {
-    overflow-x: hidden;
+    overflow: hidden;
     max-width: 100vw;
 }
