--- a/src/components/Dialogue.css
+++ b/src/components/Dialogue.css
@@ -31,7 +31,10 @@
     /* border: blue solid 2px; */
     margin-left: auto;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: flex-end;
+    /* max-height: 100%; */
     gap: 5px;
 
 }
@@ -51,6 +54,7 @@ button:hover {
     border: rgb(0, 0, 0) solid 3px;
     background-color: white;
     color: rgb(0, 0, 0);
+    /* transform: scale(130%, 130%); */
 }
 
 .speech-container {
@@ -85,7 +89,7 @@ button:hover {
     }
 }
 
-@media (max-height: 750px) {
+@media (max-height: 600px) {
     .speech-container {
         display: none;
         width: 0%;
